tabbing behind menu fix

--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -105,9 +105,5 @@ h1 {
     margin: 10px;
     margin-top: 50px;
 
-    @media (max-width: @header-breakpoint) {
-        margin-top: 90px;
-    }
-
     max-width: 1000px;
 }
